<resources>
    <string name="app_name">Time Ketchup</string>
    <string name="session_duration">Session duration</string>
    <string name="short_break_duration">Short break duration</string>
    <string name="long_break_duration">Long break duration</string>

    <string name="notification_sound">Notification sound</string>
    <string name="vibration">Vibration</string>
    <string name="settings">Settings</string>
    <string name="dialog_break_complete">"Break complete"</string>
    <string name="dialog_begin_session">"Begin session"</string>
    <string name="dialog_start_break">"Start break"</string>
    <string name="dialog_session_close">"Close"</string>
    <string name="dialog_session_complete">"Session complete"</string>
    <string name="dialog_skip_break">"Skip break"</string>
    <string name="notification_break">"Break session in progress."</string>
    <string name="notification_break_complete">"Break complete. Resume work?"</string>
    <string name="notification_session">"Work session in progress."</string>
    <string name="notification_work_complete">"Session complete. Continue?"</string>
    <string name="stop">"STOP AND EXIT"</string>
    <string name="sessions_before_long_break">Sessions before long break</string>
    <string name="choose_ringtone">Ringtones</string>
    <string name="completed_work_sessions">completed work sessions</string>
</resources>
